[package]
name = "AssaultCubeExternal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["d3d9types", "winuser", "handleapi", "errhandlingapi", "processthreadsapi", "memoryapi", "psapi", "minwindef", "ntdef", "basetsd", "winnt"] }
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
native-dialog = "0.6.3"
lazy_static = "1.4.0"



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2